--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   get: ^4.6.6
   google_nav_bar: ^5.0.6
   carousel_slider: ^4.2.1
+  iconly: ^1.0.1
+  font_awesome_flutter: ^10.5.0
 
 dev_dependencies:
   flutter_test:
