--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   carousel_slider: ^4.2.1
   iconly: ^1.0.1
   font_awesome_flutter: ^10.5.0
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
